#+TITLE: TIMU-MACOS-THEME - CHANGELOG
#+AUTHOR: Aimé Bertrand
#+DATE: [2025-01-20 Mon]
#+LANGUAGE: en
#+OPTIONS: d:t toc:nil num:nil
#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="https://macowners.club/css/gtd.css" />
#+KEYWORDS: emacs theme macos dark
#+STARTUP: indent showall

All notable changes to the "timu-macos-theme" package will be documented in this file.

* 2025-01-20 - [version 1.5]
- Add more color contrast options
  - timu-macos-muted-colors removed - default value is =nil=
  - timu-macos-colors-contrast Added - default value is ='normal=

* 2024-04-01 - [version 1.4]
- Adjust colors to macOS

* 2024-03-02 - [version 1.3]
- Add more options for the mode-line:
  - More border types
  - Options to remove the background

* 2023-08-27
- Add toggle function for muted colors

* 2023-02-01 - [version 1.2]
- Add function to toggle between dark and light flavour

* 2023-01-04 - [version 1.1]
- Add option for muted colors

* 2023-01-04 - [version 1.0]
- Add light version (flavour)

* 2023-01-04 - [version 1.0]
- Initial commit
- Add muted option for all colors