@@ -6,7 +6,7 @@
 ;; Maintainer: Aimé Bertrand <aime.bertrand@macowners.club>
 ;; Created: 2023-01-03
 ;; Keywords: faces themes
-;; Version: 1.5
+;; Version: 1.6
 ;; Package-Requires: ((emacs "27.1"))
 ;; Homepage: https://gitlab.com/aimebertrand/timu-macos-theme
 
@@ -115,9 +115,9 @@
 ;;     By default the color contrast is set to `normal'.
 ;;     To set the desired contrast add one of the following to your
 ;;     `~/.emacs.d/init.el' or `~/.emacs':
-;;       (customize-set-variable 'timu-macos-colors-contrast 'normal)
-;;       (customize-set-variable 'timu-macos-colors-contrast 'muted)
-;;       (customize-set-variable 'timu-macos-colors-contrast 'contrasted)
+;;       (customize-set-variable 'timu-macos-color-contrast 'normal)
+;;       (customize-set-variable 'timu-macos-color-contrast 'muted)
+;;       (customize-set-variable 'timu-macos-color-contrast 'contrasted)
 ;;
 ;;   E. Border for the `mode-line'
 ;;     You can set a variable to set the border type for the `mode-line'.
@@ -341,7 +341,7 @@ BACKGROUND-COLOR changes the `background' color."
   (if (eq t timu-macos-org-intense-colors)
       (list :overline overline-color :background background-color)))
 
-(defcustom timu-macos-colors-contrast 'normal
+(defcustom timu-macos-color-contrast 'normal
   "Variable to set the contrast of the colors for the theme."
   :type '(choice (const :tag "Default colors" normal)
                  (const :tag "Muted colors" muted)
@@ -414,19 +414,19 @@ Customize `timu-macos-org-intense-colors' the to achieve this."
 ;;;###autoload
 (defun timu-macos-toggle-color-contrast ()
   "Toggle between muted, contrasted and normal colors.
-Customize `timu-macos-colors-contrast' the to achieve this."
+Customize `timu-macos-color-contrast' the to achieve this."
   (interactive)
   (let ((contrast (completing-read "Chose the contrast level: "
                                    '(normal muted contrasted))))
     (pcase contrast
       ("normal"
-       (setq timu-macos-colors-contrast 'normal)
+       (setq timu-macos-color-contrast 'normal)
        (load-theme (car custom-enabled-themes) t))
       ("muted"
-       (setq timu-macos-colors-contrast 'muted)
+       (setq timu-macos-color-contrast 'muted)
        (load-theme (car custom-enabled-themes) t))
       ("contrasted"
-       (setq timu-macos-colors-contrast 'contrasted)
+       (setq timu-macos-color-contrast 'contrasted)
        (load-theme (car custom-enabled-themes) t)))))
 
 ;;;###autoload
@@ -457,38 +457,38 @@ Sourced other themes to get information about font faces for packages.")
 ;;; DARK FLAVOUR
 (when (equal timu-macos-flavour "dark")
   (let ((class '((class color) (min-colors 89)))
-        (bg        (pcase timu-macos-colors-contrast ('muted "#222327") ('contrasted "#0e0e0e") ('normal "#222327")))
-        (bg-org    (pcase timu-macos-colors-contrast ('muted "#202125") ('contrasted "#090909") ('normal "#202125")))
-        (bg-other  (pcase timu-macos-colors-contrast ('muted "#2a2a2a") ('contrasted "#111111") ('normal "#2a2a2a")))
-        (macos0    (pcase timu-macos-colors-contrast ('muted "#2c2c2c") ('contrasted "#121212") ('normal "#2c2c2c")))
-        (macos1    (pcase timu-macos-colors-contrast ('muted "#393939") ('contrasted "#171717") ('normal "#393939")))
-        (macos2    (pcase timu-macos-colors-contrast ('muted "#616161") ('contrasted "#616161") ('normal "#616161")))
-        (macos3    (pcase timu-macos-colors-contrast ('muted "#5e5e5e") ('contrasted "#5e5e5e") ('normal "#5e5e5e")))
-        (macos4    (pcase timu-macos-colors-contrast ('muted "#8c8c8c") ('contrasted "#8c8c8c") ('normal "#8c8c8c")))
-        (macos5    (pcase timu-macos-colors-contrast ('muted "#b3b3b3") ('contrasted "#b3b3b3") ('normal "#b3b3b3")))
-        (macos6    (pcase timu-macos-colors-contrast ('muted "#b3b3b3") ('contrasted "#b3b3b3") ('normal "#b3b3b3")))
-        (macos7    (pcase timu-macos-colors-contrast ('muted "#e8e8e8") ('contrasted "#e8e8e8") ('normal "#e8e8e8")))
-        (macos8    (pcase timu-macos-colors-contrast ('muted "#f4f4f4") ('contrasted "#f4f4f4") ('normal "#f4f4f4")))
-        (fg        (pcase timu-macos-colors-contrast ('muted "#ffffff") ('contrasted "#ffffff") ('normal "#ffffff")))
-        (fg-other  (pcase timu-macos-colors-contrast ('muted "#dedede") ('contrasted "#dedede") ('normal "#dedede")))
+        (bg        (pcase timu-macos-color-contrast ('muted "#222327") ('contrasted "#0e0e0e") ('normal "#222327")))
+        (bg-org    (pcase timu-macos-color-contrast ('muted "#202125") ('contrasted "#090909") ('normal "#202125")))
+        (bg-other  (pcase timu-macos-color-contrast ('muted "#2a2a2a") ('contrasted "#111111") ('normal "#2a2a2a")))
+        (macos0    (pcase timu-macos-color-contrast ('muted "#2c2c2c") ('contrasted "#121212") ('normal "#2c2c2c")))
+        (macos1    (pcase timu-macos-color-contrast ('muted "#393939") ('contrasted "#171717") ('normal "#393939")))
+        (macos2    (pcase timu-macos-color-contrast ('muted "#616161") ('contrasted "#616161") ('normal "#616161")))
+        (macos3    (pcase timu-macos-color-contrast ('muted "#5e5e5e") ('contrasted "#5e5e5e") ('normal "#5e5e5e")))
+        (macos4    (pcase timu-macos-color-contrast ('muted "#8c8c8c") ('contrasted "#8c8c8c") ('normal "#8c8c8c")))
+        (macos5    (pcase timu-macos-color-contrast ('muted "#b3b3b3") ('contrasted "#b3b3b3") ('normal "#b3b3b3")))
+        (macos6    (pcase timu-macos-color-contrast ('muted "#b3b3b3") ('contrasted "#b3b3b3") ('normal "#b3b3b3")))
+        (macos7    (pcase timu-macos-color-contrast ('muted "#e8e8e8") ('contrasted "#e8e8e8") ('normal "#e8e8e8")))
+        (macos8    (pcase timu-macos-color-contrast ('muted "#f4f4f4") ('contrasted "#f4f4f4") ('normal "#f4f4f4")))
+        (fg        (pcase timu-macos-color-contrast ('muted "#ffffff") ('contrasted "#ffffff") ('normal "#ffffff")))
+        (fg-other  (pcase timu-macos-color-contrast ('muted "#dedede") ('contrasted "#dedede") ('normal "#dedede")))
 
-        (grey      (pcase timu-macos-colors-contrast ('muted "#d2d2d2") ('contrasted "#8c8c8c") ('normal "#8c8c8c")))
-        (red       (pcase timu-macos-colors-contrast ('muted "#ffa596") ('contrasted "#ff5258") ('normal "#ff6e65")))
-        (darkred   (pcase timu-macos-colors-contrast ('muted "#ff8478") ('contrasted "#cc5850") ('normal "#cc5850")))
-        (orange    (pcase timu-macos-colors-contrast ('muted "#ffd760") ('contrasted "#f7821b") ('normal "#ffb352")))
-        (green     (pcase timu-macos-colors-contrast ('muted "#9fffac") ('contrasted "#62ba47") ('normal "#6adf73")))
-        (blue      (pcase timu-macos-colors-contrast ('muted "#75ecff") ('contrasted "#007aff") ('normal "#4e9dff")))
-        (magenta   (pcase timu-macos-colors-contrast ('muted "#ffb8ff") ('contrasted "#f84f9e") ('normal "#e45c9c")))
-        (teal      (pcase timu-macos-colors-contrast ('muted "#d7ffff") ('contrasted "#91f3e7") ('normal "#91f3e7")))
-        (yellow    (pcase timu-macos-colors-contrast ('muted "#ffff82") ('contrasted "#ffc600") ('normal "#ffde58")))
-        (darkblue  (pcase timu-macos-colors-contrast ('muted "#7abeff") ('contrasted "#009dff") ('normal "#009dff")))
-        (purple    (pcase timu-macos-colors-contrast ('muted "#e19ae9") ('contrasted "#a550a6") ('normal "#cd7bf6")))
-        (cyan      (pcase timu-macos-colors-contrast ('muted "#00ffff") ('contrasted "#00d1e9") ('normal "#00d1e9")))
-        (lightcyan (pcase timu-macos-colors-contrast ('muted "#ceffff") ('contrasted "#88c0d0") ('normal "#88c0d0")))
-        (darkcyan  (pcase timu-macos-colors-contrast ('muted "#98ddeb") ('contrasted "#5297a5") ('normal "#5297a5")))
+        (grey      (pcase timu-macos-color-contrast ('muted "#d2d2d2") ('contrasted "#8c8c8c") ('normal "#8c8c8c")))
+        (red       (pcase timu-macos-color-contrast ('muted "#ffa596") ('contrasted "#ff5258") ('normal "#ff6e65")))
+        (darkred   (pcase timu-macos-color-contrast ('muted "#ff8478") ('contrasted "#cc5850") ('normal "#cc5850")))
+        (orange    (pcase timu-macos-color-contrast ('muted "#ffd760") ('contrasted "#f7821b") ('normal "#ffb352")))
+        (green     (pcase timu-macos-color-contrast ('muted "#9fffac") ('contrasted "#62ba47") ('normal "#6adf73")))
+        (blue      (pcase timu-macos-color-contrast ('muted "#75ecff") ('contrasted "#007aff") ('normal "#4e9dff")))
+        (magenta   (pcase timu-macos-color-contrast ('muted "#ffb8ff") ('contrasted "#f84f9e") ('normal "#e45c9c")))
+        (teal      (pcase timu-macos-color-contrast ('muted "#d7ffff") ('contrasted "#91f3e7") ('normal "#91f3e7")))
+        (yellow    (pcase timu-macos-color-contrast ('muted "#ffff82") ('contrasted "#ffc600") ('normal "#ffde58")))
+        (darkblue  (pcase timu-macos-color-contrast ('muted "#7abeff") ('contrasted "#009dff") ('normal "#009dff")))
+        (purple    (pcase timu-macos-color-contrast ('muted "#e19ae9") ('contrasted "#a550a6") ('normal "#cd7bf6")))
+        (cyan      (pcase timu-macos-color-contrast ('muted "#00ffff") ('contrasted "#00d1e9") ('normal "#00d1e9")))
+        (lightcyan (pcase timu-macos-color-contrast ('muted "#ceffff") ('contrasted "#88c0d0") ('normal "#88c0d0")))
+        (darkcyan  (pcase timu-macos-color-contrast ('muted "#98ddeb") ('contrasted "#5297a5") ('normal "#5297a5")))
 
-        (black     (pcase timu-macos-colors-contrast ('muted "#000000") ('contrasted "#000000") ('normal "#000000")))
-        (white     (pcase timu-macos-colors-contrast ('muted "#ffffff") ('contrasted "#ffffff") ('normal "#ffffff"))))
+        (black     (pcase timu-macos-color-contrast ('muted "#000000") ('contrasted "#000000") ('normal "#000000")))
+        (white     (pcase timu-macos-color-contrast ('muted "#ffffff") ('contrasted "#ffffff") ('normal "#ffffff"))))
 
     (custom-theme-set-faces
      'timu-macos
@@ -2144,38 +2144,38 @@ Sourced other themes to get information about font faces for packages.")
 ;;; LIGHT FLAVOUR
 (when (equal timu-macos-flavour "light")
   (let ((class '((class color) (min-colors 89)))
-        (bg        "#ffffff")
-        (bg-org    "#f4f4f4")
-        (bg-other  "#e8e8e8")
-        (macos0    "#f4f4f4")
-        (macos1    "#dedede")
-        (macos2    "#b3b3b3")
-        (macos3    "#b3b3b3")
-        (macos4    "#8c8c8c")
-        (macos5    "#5e5e5e")
-        (macos6    "#616161")
-        (macos7    "#393939")
-        (macos8    "#2c2c2c")
-        (fg        "#222327")
-        (fg-other  "#2a2a2a")
+        (bg        (pcase timu-macos-color-contrast ('muted "#ffffff") ('contrasted "#ffffff") ('normal "#ffffff")))
+        (bg-org    (pcase timu-macos-color-contrast ('muted "#f4f4f4") ('contrasted "#f4f4f4") ('normal "#f4f4f4")))
+        (bg-other  (pcase timu-macos-color-contrast ('muted "#e8e8e8") ('contrasted "#e8e8e8") ('normal "#e8e8e8")))
+        (macos0    (pcase timu-macos-color-contrast ('muted "#f4f4f4") ('contrasted "#f4f4f4") ('normal "#f4f4f4")))
+        (macos1    (pcase timu-macos-color-contrast ('muted "#dedede") ('contrasted "#dedede") ('normal "#dedede")))
+        (macos2    (pcase timu-macos-color-contrast ('muted "#b3b3b3") ('contrasted "#b3b3b3") ('normal "#b3b3b3")))
+        (macos3    (pcase timu-macos-color-contrast ('muted "#b3b3b3") ('contrasted "#b3b3b3") ('normal "#b3b3b3")))
+        (macos4    (pcase timu-macos-color-contrast ('muted "#8c8c8c") ('contrasted "#8c8c8c") ('normal "#8c8c8c")))
+        (macos5    (pcase timu-macos-color-contrast ('muted "#5e5e5e") ('contrasted "#5e5e5e") ('normal "#5e5e5e")))
+        (macos6    (pcase timu-macos-color-contrast ('muted "#616161") ('contrasted "#616161") ('normal "#616161")))
+        (macos7    (pcase timu-macos-color-contrast ('muted "#393939") ('contrasted "#171717") ('normal "#393939")))
+        (macos8    (pcase timu-macos-color-contrast ('muted "#2c2c2c") ('contrasted "#121212") ('normal "#2c2c2c")))
+        (fg        (pcase timu-macos-color-contrast ('muted "#222327") ('contrasted "#0e0e0e") ('normal "#222327")))
+        (fg-other  (pcase timu-macos-color-contrast ('muted "#2a2a2a") ('contrasted "#111111") ('normal "#2a2a2a")))
 
-        (grey      "#8c8c8c")
-        (red       "#ff675d")
-        (darkred   "#cc5850")
-        (orange    "#ffaa4f")
-        (green     "#64d86b")
-        (blue      "#4a95ff")
-        (magenta   "#e45c9c")
-        (teal      "#91f3e7")
-        (yellow    "#ffd654")
-        (darkblue  "#009dff")
-        (purple    "#bf76e4")
-        (cyan      "#00d1e9")
-        (lightcyan "#88c0d0")
-        (darkcyan  "#5297a5")
+        (grey      (pcase timu-macos-color-contrast ('muted "#a8a8a8") ('contrasted "#707070") ('normal "#8c8c8c")))
+        (red       (pcase timu-macos-color-contrast ('muted "#ff7c70") ('contrasted "#cc524a") ('normal "#ff675d")))
+        (darkred   (pcase timu-macos-color-contrast ('muted "#f56a60") ('contrasted "#a34640") ('normal "#cc5850")))
+        (orange    (pcase timu-macos-color-contrast ('muted "#ffcc5f") ('contrasted "#cc883f") ('normal "#ffaa4f")))
+        (green     (pcase timu-macos-color-contrast ('muted "#78ff80") ('contrasted "#50ad56") ('normal "#64d86b")))
+        (blue      (pcase timu-macos-color-contrast ('muted "#59b3ff") ('contrasted "#3b77cc") ('normal "#4a95ff")))
+        (magenta   (pcase timu-macos-color-contrast ('muted "#ff6ebb") ('contrasted "#b64a7d") ('normal "#e45c9c")))
+        (teal      (pcase timu-macos-color-contrast ('muted "#aeffff") ('contrasted "#74c2b9") ('normal "#91f3e7")))
+        (yellow    (pcase timu-macos-color-contrast ('muted "#ffff65") ('contrasted "#ccab43") ('normal "#ffd654")))
+        (darkblue  (pcase timu-macos-color-contrast ('muted "#00bcff") ('contrasted "#007ecc") ('normal "#009dff")))
+        (purple    (pcase timu-macos-color-contrast ('muted "#e58eff") ('contrasted "#995eb6") ('normal "#bf76e4")))
+        (cyan      (pcase timu-macos-color-contrast ('muted "#00fbff") ('contrasted "#00a7ba") ('normal "#00d1e9")))
+        (lightcyan (pcase timu-macos-color-contrast ('muted "#a3e6fa") ('contrasted "#6d9aa6") ('normal "#88c0d0")))
+        (darkcyan  (pcase timu-macos-color-contrast ('muted "#62b5c6") ('contrasted "#427984") ('normal "#5297a5")))
 
-        (black     "#000000")
-        (white     "#ffffff"))
+        (black     (pcase timu-macos-color-contrast ('muted "#000000") ('contrasted "#000000") ('normal "#000000")))
+        (white     (pcase timu-macos-color-contrast ('muted "#ffffff") ('contrasted "#ffffff") ('normal "#ffffff"))))
 
     (custom-theme-set-faces
      'timu-macos
